# VanityGPG

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  params.example  shell.nix
.github/workflows/: test.yml
src/: gpg.rs  hex_lsx.c  hex_msa.c  hex_neon.c  lib.rs  logger.rs  main.rs
src/logger/: indicatif_backend.rs  mod.rs
src/pgp/: mod.rs  sequoia.rs
src/pgp_backends/: hex.rs  mod.rs  rpgp_backend.rs  sequoia_backend.rs
