[package]
name = "vanity_gpg"
version = "0.2.0"
edition = "2018"
authors = ["Kay Lin <i@v2bv.net>"]
description = "A simple tool for generating and filtering vanity GPG keys, c0nCurr3nt1Y"
homepage = "https://github.com/RedL0tus/VanityGPG"
repository = "https://github.com/RedL0tus/VanityGPG"
keywords = [ "GPG", "Vanity", "VanityGPG" ]
readme = "README.md"
license = "MIT"
categories = [ "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "sequoia" ]
sequoia = [ "sequoia-openpgp" ]
rpgp = [ "hex", "pgp", "rand", "sha-1", "chrono", "smallvec" ]

[dependencies]
log = { version = "^0.4", features = [ "std" ] }
hex = { version = "^0.4", optional = true }
pgp = { version = "^0.7", optional = true }
clap = "3.0.0-beta.2"
rand = { version = "^0.7", optional = true }
rayon = "^1.4"
regex = "^1.3"
sha-1 = { version = "^0.9", optional = true, features = [ "asm" ] }
chrono = { version = "^0.4", optional = true }
anyhow = "^1.0"
colored = "^2.0"
smallvec = { version = "^1.4", optional = true }
backtrace = "^0.3"
byteorder = "^1.3"
indicatif = "^0.14"
thiserror = "^1.0"
sequoia-openpgp = { version = "^0.19", optional = true }
