[package]
name = "vanity_gpg"
version = "0.2.0"
edition = "2018"
authors = ["Kay Lin <i@v2bv.net>"]
description = "A simple tool for generating and filtering vanity GPG keys, c0nCurr3nt1Y"
homepage = "https://github.com/RedL0tus/VanityGPG"
repository = "https://github.com/RedL0tus/VanityGPG"
keywords = [ "GPG", "Vanity", "VanityGPG" ]
readme = "README.md"
license = "MIT"
categories = [ "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "sequoia" ]
sequoia = [ "sequoia-openpgp" ]
rpgp = [ "pgp", "rand", "chrono", "smallvec" ]

[dev-dependencies]
hex = "^0.4"

[dependencies]
log = { version = "^0.4", features = [ "std" ] }
pgp = { version = "^0.7", optional = true }
clap = "3.0.0-beta.2"
rand = { version = "^0.7", optional = true }
rayon = "^1.5"
regex = "^1.4"
sha-1 = { version = "^0.9", features = [ "asm", "compress" ] }
anyhow = "^1.0"
chrono = { version = "^0.4", optional = true }
nettle = "^7.0"
colored = "^2.0"
smallvec = { version = "^1.6", optional = true }
backtrace = "^0.3"
byteorder = "^1.4"
indicatif = "^0.15"
thiserror = "^1.0"
jemallocator = "^0.3"
sequoia-openpgp = { version = "^1.1", optional = true }

[profile.test]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
